--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Welcome to the official Pigeon Convention website!</h1>
     <hr>
+    <p> --- Home --- <a href="trying new things.html">About</a> --- <a href="https://en.wikipedia.org/wiki/Columbidae"> More about pigeons</a> ---  </p>
+    <hr>
     <h3>Hosted every year in Peoria by local organization Agilao since 1973, the pigeon convention <br> is a chance for pigeon lovers around the world to connect with fellow enthusiasts.</h3>
     <p>We are dedicated to keeping this tradition alive by working with a number of sponsors, ensuring each convention <br> is bigger than the last!</p>
     <h3>Our Sponsors include:</h3>
@@ -20,16 +22,23 @@
         <li>Company from Foreign Country</li>
         <li>And <em>nearly 50 more!</em></li>
     </ul>
-    <h2>Here at Agilao, Our values are simple.</h2>
-    <p>Our mission is to bring awareness to underappreciated animals. Yep, that's it. For example, everyone loves Ravens. <br> They're considered cool, and smart. Pigeons, however, get a much worse reputation - despite being just as smart.</p>
-    <p>We at Agilao wanted to give Pigeons a bit of a spotlight, and so in 1971, our founder Marth Na-Clo made the first <br> at the Pigeon Convention. Although he only managed to get 1 person to come, that one person was Roy Cal-Oxi,<br>Agilao's Co-founder. Together, they took '72 off to make some big changes, and by 1973, we had the pigeon <br> convention as you know today!</p>
+    
 
-
-<br> <br> <br>
+<br> <br> <hr> <br>
+<h2>GIVEAWAY!!!</h2>
+<p>As our pigeon convention is <em>very</em> soon (in only three weeks!), We're going to be doing a raffle to help fund more <br> events to come! all you have to do is:</p>
     <ol>
-        <li>Didn't know where to put this</li>
-        <li> Had an idea, but no time</li>
-        <li>sorry ):</li>
+        <li>Go to <a href="donations.html"> this </a> link </li>
+        <li> Donate $15 or more</li>
+        <li>Results will be announced during the opening of the festival! 
+            <ul>
+                <li> First place will recieve a full refund for their ticket, free concessions for the weekend, and an exclusive <br> tour of Agilao's HQ!</li>
+                <li> Second place will recieve a full refund for their ticket, as well as free concessions for the whole weekend!</li>
+                <li> Third place will recieve a full refund of their ticket!</li>
+            </ul>
+        </li>
     </ol>
+    <p>As always, there will be ten third place winners, five second place winners, and <strong> one first place winner.</strong> Good luck, and enjoy the raffle!</p>
+    <hr>
 </body>
 </html>
