--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
             </ul>
         </li>
     </ol>
-    <p>As always, there will be ten third place winners, five second place winners, and <strong> one first place winner.</strong> Good luck, and enjoy the raffle!</p>
+    <p>As always, there will be ten third place winners, five second place winners, and <strong> one first place winner.</strong> Good luck, and <br> enjoy the raffle!</p>
     <hr>
+    <br>
+    <h2>New Sponsor: Lindblom Math & Science Academy!</h2>
+    <p>Lindblom, a high school in Chicago, has decided to sponsor the convention! In return, we will be giving LMSA students a <br> discount on tickets! They will likely do field trips here, so keep an eye out!</p>
+    <a href="https://lindblomeagles.org/"> <img src="lmsalink.jpg" alt="bro fr"> </a>
+
 </body>
 </html>
