--- a/trying new things.html
+++ b/trying new things.html
@@ -13,7 +13,10 @@
     <h2>Here at Agilao, Our values are simple.</h2>
     <p>Our mission is to bring awareness to underappreciated animals. Yep, that's it. For example, everyone loves Ravens. <br> They're considered cool, and smart. Pigeons, however, get a much worse reputation - despite being just as smart.</p>
     <p>We at Agilao wanted to give Pigeons a bit of a spotlight, and so in 1971, our founder Marth Na-Clo made the first <br> at the Pigeon Convention. Although he only managed to get 1 person to come, that one person was Roy Cal-Oxi,<br>Agilao's Co-founder. Together, they took a year off to make some big changes, and by 1973, we had the pigeon <br> convention as you know today!</p>
-    
+    <br>
+    <hr>
+    <h2>List of conventions so far:</h2>
+    <hr>
     <table>
 <tr>
     <td> Year </td> <td> Attendees </td>
