--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     <h2>New Sponsor: Lindblom Math & Science Academy!</h2>
     <p>Lindblom, a high school in Chicago, has decided to sponsor the convention! In return, we will be giving LMSA students a <br> discount on tickets! They will likely do field trips here, so keep an eye out!</p>
     <a href="https://lindblomeagles.org/"> <img src="lmsalink.jpg" alt="bro fr"> </a>
-
+<hr>
+<br>
+<h2>Venue Change???</h2>
+<p>That's right, we've changed venues for this year! To make the convention more accessible for everyone, we've moved to The <br> <a href="https://peoriaparks.org/places/facilities/forest-park-nature-center/"> Forest Park Nature Center</a>, located at <a href="https://www.google.com/maps/place/Forest+Park+Nature+Center/@40.7573443,-89.5762204,18z/data=!3m1!4b1!4m6!3m5!1s0x880a5a5801810bb7:0xb2452b3441b08f95!8m2!3d40.7573443!4d-89.5749329!16s%2Fg%2F1thqbfhr!5m1!1e4?entry=ttu&g_ep=EgoyMDI0MDkwOS4wIKXMDSoASAFQAw%3D%3D"> 5809 N Forest Park Dr, Peoria Heights, Il 61616</a>. We hope everyone has an easier time finding <br> it now that we've chosen a more mainstream locale!</p>
+<img src="FPNC - Venue.jpg">
+<hr>
+<h5>Agilao, 2006. Agilao is a member of Makougaon Industries. <a href="tos.html"> Agilao's Terms of Service</a>. This is filler to mirror how companies often have disclaimers here.</h5>
+<hr>
 </body>
 </html>
