--- a/trying new things.html
+++ b/trying new things.html
@@ -12,7 +12,8 @@
     <hr>
     <h2>Here at Agilao, Our values are simple.</h2>
     <p>Our mission is to bring awareness to underappreciated animals. Yep, that's it. For example, everyone loves Ravens. <br> They're considered cool, and smart. Pigeons, however, get a much worse reputation - despite being just as smart.</p>
-    <p>We at Agilao wanted to give Pigeons a bit of a spotlight, and so in 1971, our founder Marth Na-Clo made the first <br> at the Pigeon Convention. Although he only managed to get 1 person to come, that one person was Roy Cal-Oxi,<br>Agilao's Co-founder. Together, they took a year off to make some big changes, and by 1973, we had the pigeon <br> convention as you know today!</p>
+    <img src="NaClo and CalOxi.jpg">
+    <p>We at Agilao wanted to give Pigeons a bit of a spotlight, and so in 1971, our founder Marth Na-Clo made the first <br> at the Pigeon Convention. Although he only managed to get 1 person to come, that one person was Roy CalOxi,<br>Agilao's Co-founder. Together, they took a year off to make some big changes, and by 1973, we had the pigeon <br> convention as you know today!</p>
     <br>
     <hr>
     <h2>List of conventions so far:</h2>
@@ -106,6 +107,9 @@
     <td> 2000 </td> <td> 3,921,734 </td>
 </tr>
     </table>
-
+    <hr>
+    <h5>Agilao, 2006. Agilao is a member of Makougaon Industries. <a href="tos.html"> Agilao's Terms of Service</a>. This is filler to mirror how companies often have disclaimers here.</h5>
+    <hr>
+    
 </body>
 </html>
