--- a/donations.html
+++ b/donations.html
@@ -8,8 +8,14 @@
 <body>
     <h1> Sorry, this page seems to have been shut down.</h1>
     <hr>
+    <p> --- <a href="index.html">Home</a>  --- <a href="trying new things.html">About</a> --- <a href="https://en.wikipedia.org/wiki/Columbidae"> More about pigeons</a> ---  </p>
+    <hr>
     <h2>The reason listed is:</h2>
     <p> This ended August 9th, 2013!</p>
     <h3>We'll work to get this figured out as soon as possible. <br><br> Thank you for your understanding, <br> - Agilao Inc.</h3>
+    <hr>
+    <h5>Agilao, 2006. Agilao is a member of Makougaon Industries. <a href="tos.html"> Agilao's Terms of Service</a>. This is filler to mirror how companies often have disclaimers here.</h5>
+    <hr>
+    
 </body>
 </html>
